Fix form alignment

--- a/main.css
+++ b/main.css
@@ -98,7 +98,7 @@
      border-color: #1327c3;
  }
  .jumbotron form {
-     margin-left: 3;
+     margin-left: 3%;
      width: 29%;
      margin-top: 3%;
  }
